--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,7 @@ table tbody tr td#total{color:#090; font-weight:bold;}
 	text-decoration:none;
 }
 #resultado_busca a:hover{background:#f0f0f0;}
+
+#pai div{
+	display: none;
+}
